Fix a bunch of non-working tabs, icon alignment and make the method a little nicer

--- a/import/winbuttons.css
+++ b/import/winbuttons.css
@@ -13,21 +13,42 @@
   height: 48px;
 }
 
-.children__9293f {
+.children__9293f, .headerBar__8a7fc {
   -webkit-app-region: drag; /*Make it so you can drag the window by the titlebar*/
-  margin: -8px 0; /*Make it so the draggable item takes up the whole thing*/
 }
 
-.container__9293f>.upperContainer__9293f>.toolbar__9293f {
-  margin-right: 253px; /*distance the icons from the channel header exactly the distance that the window bar takes*/
+.tabs__80679,.container__44ee9, .tab__65d41, .searchBar__1ac1c, .tabWrapper__26669 {
+  -webkit-app-region: no-drag; /*Add exceptions for window dragging to allow clicking*/
+}
+
+.title_c38106 {
+  display: none; /*Hides the title of the server at the top, which now has nowhere to go o7*/
 }
 
 .winButtonsWithDivider_c38106:before {
   height: 24px; /*Makes the slight line between minimise and help buttons visible*/
 }
 
-.title_c38106 {
-  display: none; /*Hides the title of the server at the top, which now has nowhere to go o7*/
+.toolbar__9293f, .searchBar__1ac1c {
+  margin-right: calc(165px + 44px * var(--wb-topbar-button-count, 2) + 4px); /*Distance the different icon sets as if they were in one*/
+  gap: 12px; /*Make the gap between icons consistent*/
+}
+
+.iconWrapper__9293f>svg { /*Reduce the icon size for consistency*/
+ height: 24px; 
+ width: 24px;
+}
+
+.inviteToolbar__133bf, .headerBar__80679 {
+  padding-right: 0; /*Remove undesirable padding on group dm invite icon & shop tab icons*/
+}
+
+.sidebarList_c48ade {
+  border-top-left-radius: 0; /*Remove top left corner rounding on the sidebar*/
+}
+
+.container__9293f, .sidebarList_c48ade, .shop__6db1d, .container__133bf, .homeWrapper__0920e, .chat_f75fb0.chat_f75fb0, .container_a592e1 {
+  border-top: 0; /*Remove random top borders above the app*/
 }
 
 /*Changes the toolbox to have the same colour values for each state as neighbouring buttons*/
